@@ -137,6 +137,13 @@
               <arg>-Xpkginfo:always</arg>
             </compilerArgs>
           </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>9.5</version> <!-- until maven-compiler-plugin goes to 3.12.0 and does this for us -->
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -156,7 +163,6 @@
               --add-exports jdk.compiler/com.sun.tools.javac.comp=org.microbean.lang
               --add-exports jdk.compiler/com.sun.tools.javac.model=org.microbean.lang
               --add-opens jdk.compiler/com.sun.tools.javac.model=org.microbean.lang
-              --enable-preview
             </argLine>
             <!-- See https://junit.org/junit5/docs/snapshot/user-guide/#running-tests-build-maven-config-params -->
             <!-- See https://github.com/apache/maven-surefire/blob/eb48f1b59ca5ccf6954ef33ecab03dbaf93214cd/surefire-providers/surefire-junit-platform/src/main/java/org/apache/maven/surefire/junitplatform/JUnitPlatformProvider.java#L242-L262 -->
@@ -176,6 +182,13 @@
               <project.build.testOutputDirectory>${project.build.testOutputDirectory}</project.build.testOutputDirectory>
             </systemPropertyVariables>
           </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>9.5</version> <!-- until surefire does this for us -->
+            </dependency>
+          </dependencies>
         </plugin>
 
       </plugins>
@@ -187,13 +200,13 @@
     <jdkToolchainVendor>openjdk</jdkToolchainVendor>
 
     <!-- maven-compiler-plugin properties -->
-    <maven.compiler.release>20</maven.compiler.release>
-    <maven.compiler.source>20</maven.compiler.source>
-    <maven.compiler.target>20</maven.compiler.target>
+    <maven.compiler.release>21</maven.compiler.release>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
 
     <!-- maven-javadoc-plugin properties -->
     <detectJavaApiLink>false</detectJavaApiLink>
-    <links>https://docs.oracle.com/en/java/javase/20/docs/api/</links>
+    <links>https://docs.oracle.com/en/java/javase/21/docs/api/</links>
 
     <!-- maven-release-plugin properties; see http://maven.apache.org/maven-release/maven-release-plugin/ -->
     <goals>deploy,post-site,scm-publish:publish-scm</goals>
